adding DNS